cmake_minimum_required(VERSION 3.5)
project(c_cpp_learn)
set(CMAKE_CXX_STANDARD 11)

add_executable(ex3.10 src/cpp-primer/ch03/ex3.10.cpp)
add_executable(ex6.27 src/cpp-primer/ch06/ex6.27.cpp)
add_executable(Person src/cpp-primer/ch07/Person.cpp)
add_executable(ex2.13 src/cpp-primer/ch02/ex2.13.cpp)
add_executable(pointer1 src/cpp-primer/ch02/pointer1.cc)
add_executable(getline src/cpp-primer/ch03/getline.cc)
add_executable(3_longest_substring src/leetcode/3_longest_substring.cpp)
add_executable(2-1-1 src/understanding-c++11/2-1-1.cpp)
add_executable(2-1-2 src/understanding-c++11/2-1-2.cpp)
add_executable(2-1-3 src/understanding-c++11/2-1-3.cpp)
add_executable(2-5-1 src/understanding-c++11/2-5-1.cpp)
add_executable(2-5-2 src/understanding-c++11/2-5-2.cpp)
add_executable(2-5-3 src/understanding-c++11/2-5-3.cpp)
add_executable(2-5-4 src/understanding-c++11/2-5-4.cpp)
add_executable(2-5-5 src/understanding-c++11/2-5-5.cpp)
add_executable(2-5-6 src/understanding-c++11/2-5-6.cpp)
add_executable(2-6-1 src/understanding-c++11/2-6-1.cpp)
add_executable(2-7-2 src/understanding-c++11/2-7-2.cpp)
add_executable(2-7-3 src/understanding-c++11/2-7-3.cpp)
add_executable(2-7-4 src/understanding-c++11/2-7-4.cpp)
add_executable(2-9-1 src/understanding-c++11/2-9-1.cpp)
add_executable(lambda src/cpp-stl/ch03/lambda.cpp)
add_executable(lambda1 src/cpp-stl/ch03/lambda1.cpp)
add_executable(pair1 src/cpp-stl/pair1.cpp)
add_executable(tuple1 src/cpp-stl/tuple1.cpp)
add_executable(printtuple src/cpp-stl/printtuple.h)
add_executable(tuple2 src/cpp-stl/tuple2.cpp)
add_executable(sharedptr1 src/cpp-stl/sharedptr1.cpp)

add_executable(sharedptr2 src/cpp-stl/sharedptr2.cpp)
add_executable(sharedptr3 src/cpp-stl/sharedptr3.cpp)