cmake_minimum_required(VERSION 3.5)
project(c_cpp_learn)
set(CMAKE_CXX_STANDARD 11)

add_executable(ex3.10 src/cpp-primer/ch03/ex3.10.cpp)
add_executable(ex6.27 src/cpp-primer/ch06/ex6.27.cpp)
add_executable(Person src/cpp-primer/ch07/Person.cpp)
add_executable(ex2.13 src/cpp-primer/ch02/ex2.13.cpp)
add_executable(pointer1 src/cpp-primer/ch02/pointer1.cc)
add_executable(getline src/cpp-primer/ch03/getline.cc)
add_executable(3_longest_substring src/leetcode/3_longest_substring.cpp)
add_executable(2-1-1 src/understanding-c++11/2-1-1.cpp)
add_executable(2-1-2 src/understanding-c++11/2-1-2.cpp)
add_executable(2-1-3 src/understanding-c++11/2-1-3.cpp)
add_executable(2-5-1 src/understanding-c++11/2-5-1.cpp)
add_executable(2-5-2 src/understanding-c++11/2-5-2.cpp)
add_executable(2-5-3 src/understanding-c++11/2-5-3.cpp)
add_executable(2-5-4 src/understanding-c++11/2-5-4.cpp)
add_executable(2-5-5 src/understanding-c++11/2-5-5.cpp)
add_executable(2-5-6 src/understanding-c++11/2-5-6.cpp)
add_executable(2-6-1 src/understanding-c++11/2-6-1.cpp)
add_executable(2-7-2 src/understanding-c++11/2-7-2.cpp)
add_executable(2-7-3 src/understanding-c++11/2-7-3.cpp)
add_executable(2-7-4 src/understanding-c++11/2-7-4.cpp)
add_executable(2-9-1 src/understanding-c++11/2-9-1.cpp)
add_executable(lambda src/cpp-stl/ch03/lambda.cpp)
add_executable(lambda1 src/cpp-stl/ch03/lambda1.cpp)
add_executable(pair1 src/cpp-stl/pair1.cpp)
#add_executable(printtuple src/cpp-stl/printtuple.h)
#add_executable(tuple1 src/cpp-stl/tuple1.cpp)
#add_executable(tuple2 src/cpp-stl/tuple2.cpp)
add_executable(sharedptr1 src/cpp-stl/sharedptr1.cpp)
add_executable(sharedptr2 src/cpp-stl/sharedptr2.cpp)
add_executable(sharedptr3 src/cpp-stl/sharedptr3.cpp)
add_executable(weakptr1 src/cpp-stl/weakptr1.cpp)
add_executable(weakptr2 src/cpp-stl/weakptr2.cpp)
add_executable(enableshared1 src/cpp-stl/enableshared1.cpp)
add_executable(uniqueptr1 src/cpp-stl/uniqueptr1.cpp)
add_executable(limits1 src/cpp-stl/limits1.cpp)
add_executable(minmax1 src/cpp-stl/minmax1.cpp)
add_executable(ratio1 src/cpp-stl/ratio1.cpp)
#add_executable(clock src/cpp-stl/clock.h)
#add_executable(clock1 src/cpp-stl/clock1.cpp)
add_executable(chrono1 src/cpp-stl/chrono1.cpp)
add_executable(vector1 src/cpp-stl/vector1.cpp)

add_executable(deque1 src/cpp-stl/deque1.cpp)
add_executable(array1 src/cpp-stl/array1.cpp)
add_executable(list1 src/cpp-stl/list1.cpp)
add_executable(list2 src/cpp-stl/list2.cpp)
add_executable(forwardlist1 src/cpp-stl/forwardlist1.cpp)
add_executable(multiset1 src/cpp-stl/multiset1.cpp)
add_executable(multimap1 src/cpp-stl/multimap1.cpp)

add_executable(unordmultiset1 src/cpp-stl/unordmultiset1.cpp)
add_executable(unordermap1 src/cpp-stl/unordermap1.cpp)
add_executable(assoarray1 src/cpp-stl/assoarray1.cpp)
add_executable(list1old src/cpp-stl/list1old.cpp)
add_executable(algo1 src/cpp-stl/algo1.cpp)
add_executable(algo1old src/cpp-stl/algo1old.cpp)