cmake_minimum_required(VERSION 3.5)
project(c_cpp_learn)
set(CMAKE_CXX_STANDARD 11)

add_executable(ex3.10 src/cpp-primer/ch03/ex3.10.cpp)
add_executable(ex6.27 src/cpp-primer/ch06/ex6.27.cpp)
add_executable(Person src/cpp-primer/ch07/Person.cpp)
add_executable(ex2.13 src/cpp-primer/ch02/ex2.13.cpp)
add_executable(pointer1 src/cpp-primer/ch02/pointer1.cc)
add_executable(getline src/cpp-primer/ch03/getline.cc)
add_executable(3_longest_substring src/leetcode/3_longest_substring.cpp)
add_executable(2-1-1 src/understanding-c++11/2-1-1.cpp)
add_executable(2-1-2 src/understanding-c++11/2-1-2.cpp)
add_executable(2-1-3 src/understanding-c++11/2-1-3.cpp)
add_executable(2-5-1 src/understanding-c++11/2-5-1.cpp)
add_executable(2-5-2 src/understanding-c++11/2-5-2.cpp)
add_executable(2-5-3 src/understanding-c++11/2-5-3.cpp)
add_executable(2-5-4 src/understanding-c++11/2-5-4.cpp)
add_executable(2-5-5 src/understanding-c++11/2-5-5.cpp)
add_executable(2-5-6 src/understanding-c++11/2-5-6.cpp)
add_executable(2-6-1 src/understanding-c++11/2-6-1.cpp)
add_executable(2-7-2 src/understanding-c++11/2-7-2.cpp)
add_executable(2-7-3 src/understanding-c++11/2-7-3.cpp)
add_executable(2-7-4 src/understanding-c++11/2-7-4.cpp)
add_executable(2-9-1 src/understanding-c++11/2-9-1.cpp)
add_executable(lambda src/cpp-stl/ch03/lambda.cpp)
add_executable(lambda1 src/cpp-stl/stl/lambda1.cpp)
add_executable(pair1 src/cpp-stl/util/pair1.cpp)
#add_executable(printtuple src/cpp-stl/printtuple.h)
#add_executable(tuple1 src/cpp-stl/tuple1.cpp)
#add_executable(tuple2 src/cpp-stl/tuple2.cpp)
add_executable(sharedptr1 src/cpp-stl/util/sharedptr1.cpp)
add_executable(sharedptr2 src/cpp-stl/util/sharedptr2.cpp)
add_executable(sharedptr3 src/cpp-stl/util/sharedptr3.cpp)
add_executable(weakptr1 src/cpp-stl/util/weakptr1.cpp)
add_executable(weakptr2 src/cpp-stl/util/weakptr2.cpp)
add_executable(enableshared1 src/cpp-stl/enableshared1.cpp)
add_executable(uniqueptr1 src/cpp-stl/util/uniqueptr1.cpp)
add_executable(limits1 src/cpp-stl/util/limits1.cpp)
add_executable(minmax1 src/cpp-stl/minmax1.cpp)
add_executable(ratio1 src/cpp-stl/util/ratio1.cpp)
#add_executable(clock src/cpp-stl/clock.h)
#add_executable(clock1 src/cpp-stl/clock1.cpp)
add_executable(chrono1 src/cpp-stl/util/chrono1.cpp)

add_executable(deque1 src/cpp-stl/cont/deque1.cpp)
add_executable(array1 src/cpp-stl/stl/array1.cpp)
add_executable(list1 src/cpp-stl/cont/list1.cpp)
add_executable(list2 src/cpp-stl/stl/list2.cpp)
add_executable(forwardlist1 src/cpp-stl/cont/forwardlist1.cpp)
add_executable(multiset1 src/cpp-stl/stl/multiset1.cpp)
add_executable(multimap1 src/cpp-stl/stl/multimap1.cpp)

add_executable(unordmultiset1 src/cpp-stl/cont/unordmultiset1.cpp)
add_executable(unordermap1 src/cpp-stl/stl/unordermap1.cpp)
add_executable(assoarray1 src/cpp-stl/stl/assoarray1.cpp)
add_executable(list1old src/cpp-stl/stl/list1old.cpp)
add_executable(algo1 src/cpp-stl/stl/algo1.cpp)
add_executable(algo1old src/cpp-stl/stl/algo1old.cpp)
add_executable(find1 src/cpp-stl/stl/find1.cpp)

add_executable(binder1 src/cpp-stl/stl/binder1.cpp)
add_executable(ex1.2 src/cpp-primer/ch01/ex1.2.cpp)
add_executable(exception src/cpp-stl/util/exception.cpp)
add_executable(copy1 src/cpp-stl/stl/copy1.cpp)
add_executable(copy2 src/cpp-stl/stl/copy2.cpp)
add_executable(ioiter1 src/cpp-stl/stl/ioiter1.cpp)
add_executable(reviter1 src/cpp-stl/iter/reviter1.cpp)
add_executable(remove1 src/cpp-stl/stl/remove1.cpp)
add_executable(remove2 src/cpp-stl/stl/remove2.cpp)
add_executable(remove3 src/cpp-stl/stl/remove3.cpp)
add_executable(remove4 src/cpp-stl/stl/remove4.cpp)
add_executable(foreach1 src/cpp-stl/stl/foreach1.cpp)
add_executable(transform1 src/cpp-stl/stl/transform1.cpp)
add_executable(prime1 src/cpp-stl/stl/prime1.cpp)
add_executable(sort1 src/cpp-stl/stl/sort1.cpp)
add_executable(sort2 src/cpp-stl/stl/sort2.cpp)
add_executable(foreach2 src/cpp-stl/stl/foreach2.cpp)
add_executable(add1 src/cpp-stl/stl/add1.cpp)
add_executable(fo1 src/cpp-stl/stl/fo1.cpp)
add_executable(bind1 src/cpp-stl/stl/bind1.cpp)

add_executable(forwardlistfind1 src/cpp-stl/cont/forwardlistfind1.cpp)

add_executable(forwardlistsplice1 src/cpp-stl/cont/forwardlistsplice1.cpp)


add_executable(unordset1 src/cpp-stl/cont/unordset1.cpp)

add_executable(hashfunc1 src/cpp-stl/cont/hashfunc1.cpp)
add_executable(hashfunc2 src/cpp-stl/cont/hashfunc2.cpp)

add_executable(unordinspect1 src/cpp-stl/cont/unordinspect1.cpp)
add_executable(cstylearray1 src/cpp-stl/cont/cstylearray1.cpp)
add_executable(cstylearray1old src/cpp-stl/cont/cstylearray1old.cpp)
add_executable(refsem1 src/cpp-stl/cont/refsem1.cpp)
add_executable(itercategory1 src/cpp-stl/iter/itercategory1.cpp)
add_executable(advace1 src/cpp-stl/iter/advace1.cpp)
add_executable(distance src/cpp-stl/iter/distance.cpp)
add_executable(iterswap1 src/cpp-stl/iter/iterswap1.cpp)

add_executable(reviter2 src/cpp-stl/iter/reviter2.cpp)
add_executable(reviter3 src/cpp-stl/iter/reviter3.cpp)
add_executable(reviter4 src/cpp-stl/iter/reviter4.cpp)
add_executable(backinserter1 src/cpp-stl/iter/backinserter1.cpp)
add_executable(frontinserter1 src/cpp-stl/iter/frontinserter1.cpp)
add_executable(inserter1 src/cpp-stl/iter/inserter1.cpp)